--- a/Artivity.Apid/packages.config
+++ b/Artivity.Apid/packages.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net40" requireReinstallation="True" />
   <package id="ini-parser" version="2.3.0" targetFramework="net45" />
@@ -9,6 +9,6 @@
   <package id="OAuth2" version="0.8.37" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net40" requireReinstallation="True" />
   <package id="Semiodesk.Trinity.Core" version="0.9.147-rc" targetFramework="net40" />
-  <package id="TinyVirtuoso" version="0.3.29" targetFramework="net45" />
+  <package id="TinyVirtuoso" version="0.3.30" targetFramework="net45" />
   <package id="TinyVirtuoso.win" version="7.2.1" targetFramework="net40" />
 </packages>
