Implementd index of created file events in FileSystemMonitor.

--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -120,7 +120,9 @@
     <Compile Include="Accounts\OrcidAccountProvider.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="HttpService.cs" />
-    <Compile Include="Helpers\FileSystemWatcherInfo.cs" />
+    <Compile Include="IO\FileEventIndex.cs" />
+    <Compile Include="IO\FileEventRecord.cs" />
+    <Compile Include="IO\FileSystemWatcherInfo.cs" />
     <Compile Include="Modules\ApiModule.cs" />
     <Compile Include="Modules\AgentsModule.cs" />
     <Compile Include="Parameters\ActivityParameter.cs" />
@@ -140,12 +142,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
     <Compile Include="Parameters\AgentParameter.cs" />
-    <Compile Include="Helpers\FileSystemMonitor.cs" />
+    <Compile Include="IO\FileSystemMonitor.cs" />
     <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Parameters\UriParameter.cs" />
     <Compile Include="Modules\UriModule.cs" />
-    <Compile Include="Helpers\FileInfoCache.cs" />
+    <Compile Include="IO\FileInfoCache.cs" />
     <Compile Include="Platforms\OSX\CoreFoundation.cs" />
     <Compile Include="Plugins\PluginChecker.cs" />
     <Compile Include="Plugins\PluginManifest.cs" />
@@ -161,9 +163,9 @@
     <Compile Include="Platforms\OSX\InstallationWatchdog.cs" />
     <Compile Include="Repositories\ResourceRepository.cs" />
     <Compile Include="ProgramBase.cs" />
-    <Compile Include="Helpers\IFileSystemWatcher.cs" />
-    <Compile Include="Helpers\FileSystemWatcherFactory.cs" />
-    <Compile Include="Helpers\DefaultFileSystemWatcher.cs" />
+    <Compile Include="IO\IFileSystemWatcher.cs" />
+    <Compile Include="IO\FileSystemWatcherFactory.cs" />
+    <Compile Include="IO\DefaultFileSystemWatcher.cs" />
     <Compile Include="Helpers\JsonNetBodyDeserializer.cs" />
     <Compile Include="Helpers\JsonNetSerializer.cs" />
     <Compile Include="Helpers\NancyHelpers.cs" />
