Implemented SPARQL query editor based on YASGUI.

--- a/Artivity.Apid/TinyVirtuoso/database/virtuoso.ini
+++ b/Artivity.Apid/TinyVirtuoso/database/virtuoso.ini
@@ -220,7 +220,7 @@ DefaultHost			= localhost:8890
 
 
 [SPARQL]
-;ExternalQuerySource		= 1
+ExternalQuerySource		= 1
 ;ExternalXsltSource 		= 1
 ;DefaultGraph      		= http://localhost:8890/dataspace
 ;ImmutableGraphs    		= http://localhost:8890/dataspace
