Added missing files.

--- a/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
+++ b/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
@@ -124,11 +124,40 @@
     <None Include="app\bower_components\moment-duration-format\LICENSE" />
     <None Include="app\bower_components\moment-duration-format\package.json" />
     <None Include="app\bower_components\moment-duration-format\README.md" />
+    <None Include="app\bower_components\yasgui\.bower.json" />
+    <None Include="app\bower_components\yasgui\bower.json" />
+    <None Include="app\bower_components\yasgui\CNAME" />
+    <None Include="app\bower_components\yasgui\dist\yasgui.bundled.min.js.map" />
+    <None Include="app\bower_components\yasgui\dist\yasgui.js.map" />
+    <None Include="app\bower_components\yasgui\dist\yasgui.min.js.map" />
+    <None Include="app\bower_components\yasgui\doc\main.scss" />
+    <None Include="app\bower_components\yasgui\package.json" />
+    <None Include="app\bower_components\yasgui\README.md" />
+    <None Include="app\bower_components\yasgui\src\scss\bootstrap.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\bootstrap_full.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\controlbar.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_codemirror.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_foldgutter.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_fullscreen.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_jquery.dataTables.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_jquery.ui.resizable.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_pivot.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_selectize.bootstrap3.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\cssIncludes\_selectize.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\global.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\menu.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\mixins.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\scoped.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\tab.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\tracker.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\yasqe.scss" />
+    <None Include="app\bower_components\yasgui\src\scss\yasr.scss" />
     <None Include="packages.config" />
     <EmbeddedResource Include="error\index.html" />
     <EmbeddedResource Include="app\js\app.overlay.js" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="app\query.html" />
     <EmbeddedResource Include="app\js\lib\d3-timeline.js" />
     <EmbeddedResource Include="app\js\app.translation.js" />
     <EmbeddedResource Include="app\js\lib\quantize.js" />
@@ -192,6 +221,50 @@
     <EmbeddedResource Include="app\bower_components\fullcalendar\dist\fullcalendar.min.js" />
     <EmbeddedResource Include="app\bower_components\fullcalendar\dist\fullcalendar.css" />
     <EmbeddedResource Include="app\bower_components\fullcalendar\dist\fullcalendar.js" />
+    <Content Include="app\bower_components\yasgui\blank.html" />
+    <Content Include="app\bower_components\yasgui\dist\yasgui.bundled.js" />
+    <Content Include="app\bower_components\yasgui\dist\yasgui.bundled.min.js" />
+    <Content Include="app\bower_components\yasgui\dist\yasgui.css" />
+    <Content Include="app\bower_components\yasgui\dist\yasgui.js" />
+    <EmbeddedResource Include="app\bower_components\yasgui\dist\yasgui.min.css" />
+    <EmbeddedResource Include="app\bower_components\yasgui\dist\yasgui.min.js" />
+    <Content Include="app\bower_components\yasgui\doc\doc.min.css" />
+    <Content Include="app\bower_components\yasgui\doc\doc.min.js" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\blacktocat.png" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\blacktocat_black.png" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\data2semantics.png" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\favicon.png" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\npm.png" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\triply.svg" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\yasgui.png" />
+    <Content Include="app\bower_components\yasgui\doc\imgs\yasqe.png" />
+    <Content Include="app\bower_components\yasgui\doc\index.html" />
+    <Content Include="app\bower_components\yasgui\doc\main.js" />
+    <Content Include="app\bower_components\yasgui\gulpFile.js" />
+    <Content Include="app\bower_components\yasgui\gulp\makeCss.js" />
+    <Content Include="app\bower_components\yasgui\gulp\makeJs.js" />
+    <Content Include="app\bower_components\yasgui\gulp\makeMainPage.js" />
+    <Content Include="app\bower_components\yasgui\gulp\optionalShim.js" />
+    <Content Include="app\bower_components\yasgui\gulp\paths.js" />
+    <Content Include="app\bower_components\yasgui\gulp\serve.js" />
+    <Content Include="app\bower_components\yasgui\gulp\version.js" />
+    <Content Include="app\bower_components\yasgui\index.html" />
+    <Content Include="app\bower_components\yasgui\src\defaults.js" />
+    <Content Include="app\bower_components\yasgui\src\entry.js" />
+    <Content Include="app\bower_components\yasgui\src\imgs.js" />
+    <Content Include="app\bower_components\yasgui\src\jquery\endpointCombi.js" />
+    <Content Include="app\bower_components\yasgui\src\jquery\extendJquery.js" />
+    <Content Include="app\bower_components\yasgui\src\jquery\outsideclick.js" />
+    <Content Include="app\bower_components\yasgui\src\jquery\tab.js" />
+    <Content Include="app\bower_components\yasgui\src\main.js" />
+    <Content Include="app\bower_components\yasgui\src\menu.js" />
+    <Content Include="app\bower_components\yasgui\src\shareLink.js" />
+    <Content Include="app\bower_components\yasgui\src\tab.js" />
+    <Content Include="app\bower_components\yasgui\src\tabPaneMenu.js" />
+    <Content Include="app\bower_components\yasgui\src\tracker.js" />
+    <Content Include="app\bower_components\yasgui\src\utils.js" />
+    <Content Include="app\bower_components\yasgui\src\yasqe.js" />
+    <Content Include="app\bower_components\yasgui\src\yasr.js" />
     <Content Include="app\img\heart-broken.svg" />
     <Content Include="app\img\heart.svg" />
     <Content Include="app\img\orcid_64x64.png" />
