--- a/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
+++ b/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
@@ -208,6 +208,8 @@
     <EmbeddedResource Include="app\bower_components\jquery-ui\jquery-ui.js" />
     <EmbeddedResource Include="app\bower_components\jquery-ui\jquery-ui.min.js" />
     <EmbeddedResource Include="app\bower_components\jquery-ui\ui\widgets\draggable.js" />
+    <EmbeddedResource Include="app\bower_components\angular-bootstrap\ui-bootstrap-tpls.js" />
+    <EmbeddedResource Include="app\bower_components\angular-bootstrap\ui-bootstrap-tpls.min.js" />
     <Content Include="app\bower_components\angular-moment\.gitignore" />
     <EmbeddedResource Include="app\bower_components\angular-moment\angular-moment.js" />
     <EmbeddedResource Include="app\bower_components\angular-moment\angular-moment.min.js" />
