--- a/Artivity.Apid.Modules.Journal/app/bower.json
+++ b/Artivity.Apid.Modules.Journal/app/bower.json
@@ -20,6 +20,7 @@
 		"jquery-ui": "^1.12.1",
 		"jquery-editable-select": "^2.0.0",
 		"angular": "^1.5.8",
+		"angular-animate": "^1.5.8",
         "angular-route": "^1.5.7",
         "angular-translate": "^2.12.1",
         "angular-ui": "^0.4.0",
