--- a/Artivity.DataModel/Artivity.DataModel.csproj
+++ b/Artivity.DataModel/Artivity.DataModel.csproj
@@ -43,8 +43,9 @@
     <Compile Include="ObjectModel\Comment.cs" />
     <Compile Include="ObjectModel\Communication.cs" />
     <Compile Include="ObjectModel\Entities\Folder.cs" />
+    <Compile Include="ObjectModel\HttpAuthenticationProtocol.cs" />
     <Compile Include="ObjectModel\OnlineAccount.cs" />
-    <Compile Include="ObjectModel\OnlineServiceConnector.cs" />
+    <Compile Include="ObjectModel\HttpAuthenticationParameter.cs" />
     <Compile Include="ObjectModel\Person.cs" />
     <Compile Include="ObjectModel\Activity.cs" />
     <Compile Include="ObjectModel\SoftwareAssociation.cs" />
