--- a/Artivity.DataModel/app.config
+++ b/Artivity.DataModel/app.config
@@ -44,6 +44,10 @@
       <Ontology Uri="http://w3id.org/art/terms/1.0/" Prefix="art">
         <FileSource Location="Ontologies/art.ttl" />
       </Ontology>
+
+      <Ontology Uri="http://w3id.org/art/terms/1.0/features/" Prefix="artf">
+        <FileSource Location="Ontologies/artf.ttl" />
+      </Ontology>
       
       <Ontology Uri="http://xmlns.com/foaf/0.1/" Prefix="foaf">
         <FileSource Location="Ontologies/foaf.rdf" />
